IE fixes, added widths to sections, and text wasn't wrapping

--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -37,6 +37,10 @@
   padding-left: 100px;
 }
 
+.footer__right {
+  padding-left: 100px;
+}
+
 @media screen and (max-width: 60em) {
   .footer__right {
     display: none;
